github link in notebook

--- a/Projet_FixMatch.ipynb
+++ b/Projet_FixMatch.ipynb
@@ -13,7 +13,11 @@
         "\n",
         "__Etudiants__: Alexandre Personnic, Thi Minh Ha Ho\n",
         "\n",
-        "__Encadrant__: Axel Carlier\n"
+        "__Encadrant__: Axel Carlier\n",
+        "\n",
+        "\n",
+        "Veuillez trouver nos modèles entraînés et notre ensemble de données dans ce Github\n",
+        "https://github.com/tmhho/FixMatch"
       ]
     },
     {
